--- a/styles/app.scss
+++ b/styles/app.scss
@@ -5,3 +5,8 @@
 
 // Templates
 @import "templates/layout";
+
+// Components
+@import "components/card";
+@import "components/form";
+@import "components/list";
