--- a/styles/components/_form.scss
+++ b/styles/components/_form.scss
@@ -18,10 +18,15 @@
         font-size: 1rem;
     }
 
-    &__submit {
+    &__submit,
+    &__cancel {
         padding: .2em .5em;
         margin: .5em 0;
         font-size: 1rem;
         cursor: pointer;
+    }
+
+    &__cancel {
+        margin-left: .5em;
     }
 }
